# primesieve.rs

./: README.md
primesieve/: Cargo.toml
primesieve-rs/: .gitignore  Cargo.toml
primesieve-rs/src/: lib.rs
primesieve-sys/: .gitignore  Cargo.toml  build.rs  primesieve_auxbind.c  rustfmt.toml
primesieve-sys/src/: iterator.rs  iterator.rs.bk  lib.rs  lib.rs.bk
primesieve/src/: lib.rs
