# Cargo.toml
# Copyright 2016 Alexander Altman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "primesieve-sys"
description = "Raw bindings to the [primesieve](http://primesieve.org) C library"
version = "0.2.1"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
license = "Apache-2.0"
homepage = "https://github.com/pthariensflame/primesieve.rs"
repository = "https://github.com/pthariensflame/primesieve.rs"
documentation = "https://docs.rs/crate/primesieve-sys"
keywords = ["bindings", "primes"]
build = "build.rs"
links = "primesieve"

[lib]
path = "src/lib.rs"
name = "primesieve_sys"

[dependencies.libc]
version = "~0.2.22"
default-features = false

[build-dependencies]
gcc = "~0.3.45"
